syntax = "proto3";
package opennms.sink.flow;

option java_multiple_files = true;
option java_package = "org.opennms.horizon.grpc.telemetry.contract";
option java_outer_classname = "TelemetryProtos";

message TelemetryMessage {
  uint64 timestamp = 1;
  bytes bytes = 2;
  optional string source_address = 3;
  optional uint32 source_port = 4;
  string queue = 5;
  FlowSource flowSource = 6;
  ProcessingOptions processingOptions = 7;
}

message TelemetryMessageLog {
    string location = 1;
    string system_id = 2;
    optional string source_address = 3;
    optional uint32 source_port = 4;
    repeated TelemetryMessage message = 5;
}

message FlowSource {
  string location = 1;
  string sourceAddress = 2;
  ContextKey contextKey = 3;
}

message ContextKey {
  string context = 1;
  string key = 2;
}

message ProcessingOptions {
  bool applicationThresholding = 1;
  bool applicationDataCollection = 2;
  repeated PackageConfig packageConfig = 3;
}

message PackageConfig {
  string name = 1;
  Filter filter = 2;
  repeated Parameter parameters = 4;
  string filter_rule = 5;
  map<string, string>  parameter_map = 6;
}

message Filter {
  string content = 1;
}

message Parameter {
  string key = 1;
  string value = 2;
  optional string group = 3;
}
